# lightningGPT

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/lightningpt/: __init__.py  attention.py  logger.py  model.py  utils.py
